--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.codeborne</groupId>
+      <artifactId>selenide</artifactId>
+      <version>5.13.0</version>
+    </dependency>
   </dependencies>
 
   <build>
